fix extra space between fellow images

--- a/_assets/css/pages/_project.scss
+++ b/_assets/css/pages/_project.scss
@@ -168,10 +168,6 @@
       // display: flex;
       display: inline-block;
       margin: 1rem 0;
-      @include at-media("tablet") {
-        // padding-left: 1rem;
-        padding-right: 1rem;
-      }
     }
   
     .project-team__member-text {
